--- a/aboly.html
+++ b/aboly.html
@@ -2214,8 +2214,8 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#6.13">6.13</a></div>
 <div class="lybloboriginaltext"><p>子谓<a href="#zixia">子夏</a>曰：“女为君子儒，无为小人儒。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize"><li>
-<p><a id="ru2"></a><span class="lyterm">儒</span>：本义为春秋时期从巫（以舞降神）、祝（以辞告神）、卜（占卜吉凶）、史（掌典籍制度。以上详见《礼记·春官宗伯》）中分化出来的一种职业。从业者熟悉诗书礼乐，工作内容是传授道德礼仪方面的知识，主持婚丧嫁娶之类的仪式。后来，孔子开创的学派称为儒家，注重道德修养，崇尚仁礼忠孝。<span class="lyterm">君子儒</span>、<span class="lyterm">小人儒</span>的区别由此可辨。《论语》中仅有本章提到“儒”。</p>
-<p><span class="lyseealso"><span>【参】</span><span><a href="#8.12" class="lyref">8.12</a> 。《论语注疏》：<span class="lyq">君子为儒，将以明道；小人为儒，则<a href="#jin1b">矜</a>其名。</span>《四书集注》引程颐语：<span class="lyq">君子儒<a href="#14.24">为己</a>，小人儒为人。</span>《礼记·儒行》托孔子之口描述了儒者的德行，包括自立、容貌、备豫、近人、特立、刚毅、忧思、任举、规为、交友、尊让等方面。如忧思者：<span class="lyq">今人与居，古人与稽；今世行之，后世以为楷。……身可危也，而志不可夺也；虽危，起居竟信其志，犹将不忘百姓之病也。</span>（稽：考校（是非得失），也就是拟合古仁人之心。楷：典范，楷模。起居：行动，做事。信：通“伸”。）这赋予了“儒者”浓重的历史责任感，可能也是范仲淹《岳阳楼记》的创作灵感之一。</span></span></p>
+<p><a id="ru2"></a><span class="lyterm">儒</span>：本义为春秋时期从巫（以舞降神）、祝（以辞告神）、卜（占卜吉凶）、史（掌典籍制度。以上详见《礼记·春官宗伯》）中分化出来的一种职业。从业者熟悉诗书礼乐，工作内容是传授道德礼仪方面的知识，主持婚丧嫁娶之类的仪式。后来，孔子开创的学派称为儒家，注重道德修养，“儒”的意义也从单纯的职业转为终身的事业，就像“<a href="#junzi">君子</a>”不再取决于出身贵贱，而是看实际的品行。<span class="lyterm">君子儒</span>、<span class="lyterm">小人儒</span>的区别由此可辨。《论语》中仅有本章提到“儒”。</p>
+<p><span class="lyseealso"><span>【参】</span><span>《论语注疏》：<span class="lyq">君子为儒，将以明道；小人为儒，则<a href="#jin1b">矜</a>其名。</span>《四书集注》引程颐语：<span class="lyq">君子儒<a href="#14.24">为己</a>，小人儒为人。</span>《礼记·儒行》托孔子之口描述了儒者的德行，包括自立、容貌、备豫、近人、特立、刚毅、忧思、任举、规为、交友、尊让等方面。如忧思者：<span class="lyq">今人与居，古人与稽；今世行之，后世以为楷。……身可危也，而志不可夺也；虽危，起居竟信其志，犹将不忘百姓之病也。</span>（稽：考校（是非得失），也就是拟合古仁人之心。楷：典范，楷模。起居：行动，做事。信：通“伸”。）这赋予了“儒者”浓重的历史责任感，可能也是范仲淹《岳阳楼记》的创作灵感之一。</span></span></p>
 </li></ul></div>
 </div>
 <a id="6.14"></a><div class="lyblob">
@@ -2911,7 +2911,10 @@ img.characterimg {
 <a id="8.12"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#8.12">8.12</a></div>
 <div class="lybloboriginaltext"><p>子曰：“三年学，不至于谷，不易得也。”</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">不至于谷</span>：指不把主意打到当官发财上去。<span class="lyterm">谷</span>代指<a href="#su4a">官俸</a>。</p></li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize"><li>
+<p><span class="lyterm">不至于谷</span>：指不把主意打到当官发财上去。<span class="lyterm">谷</span>代指<a href="#su4a">官俸</a>。</p>
+<p>思考：对你来说，学习的意义是什么？努力读书就是为了找个“好工作”吗？为什么会有“终身学习”的说法？<span class="lyseealso"><span>【参】</span><span><a href="#6.13" class="lyref">6.13</a> <a href="#14.24" class="lyref">14.24</a> </span></span></p>
+</li></ul></div>
 </div>
 <a id="8.13"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#8.13">8.13</a></div>
