--- a/aboly.html
+++ b/aboly.html
@@ -5080,7 +5080,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="shiyu"></a><span class="lyterm">史鱼</span>：卫国大夫，名鳅，字子鱼，他和<a href="#zhutuo">祝鮀</a>的字相同，但不是同一人。据《孔子家语·困誓》、《韩诗外传》第7卷第21章，<a href="#weilinggong">卫灵公</a>不用贤臣蘧伯玉，信任男宠<a href="#mizixia">弥子瑕</a>，史鱼多次力谏未果，临终前仍然念念不忘，觉得<span class="lyq">为臣不能正君</span>，是自己失职，嘱咐儿子不要在正堂治丧，把尸体摆在窗户底下就行了。来吊丧的灵公得知后大惊，立即任用了蘧伯玉，疏远了弥子瑕。《韩诗外传》评曰：<span class="lyq">生以身谏，死以尸谏，可谓直矣！</span></p></li>
 <li><p><span class="lyterm">如矢</span>：指像箭一样直不可屈。<a id="shi3"></a><span class="lyterm">矢</span>：箭。</p></li>
-<li><p><span class="lyterm">卷而怀之</span>：卷起来放进怀里，这是比喻用法，指把自己的才能主张收藏好，不施展外露，具体所指的事迹已难确考。前面的<span class="lyterm">可</span>字说明，具备适当的柔韧性值得赞赏，但“卷而怀之”并不等于“邦无道”时唯一可行的途径。<span class="lyseealso"><span>【参】</span><span>《晋书·王戎传》载，竹林七贤之末的王戎<span class="lyq">以晋室方乱，慕蘧伯玉之为人，与时舒卷，无蹇谔之节。自经典选，未尝进寒素、退虚名，但与时浮沉，户调门选而已。</span>晋武帝司马炎曾为他开脱：<span class="lyq">“戎之为行，岂怀私苟得，正当不欲为异耳！”</span>他位至三公，却委事下属，欢娱逐乐，并无蘧伯玉汲汲于仁的精神，也落得个<span class="lyq">苟媚取容</span>的评价。（蹇（<span class="lypinyin">jiǎn</span>）<a href="#e4">谔</a>：忠直敢言的样子。蹇：通“謇”，本义为口吃，引申为仗义执言，正直。经：管理。典选：选拔人才为官。寒素：指门第低微的贤才。户调门选：指依照家世地位录用。）</span></span></p></li>
+<li><p><span class="lyterm">卷而怀之</span>：卷起来放进怀里，这是比喻用法，指把自己的才能主张收藏好，不施展外露，具体所指的事迹已难确考。前面的<span class="lyterm">可</span>字说明，具备适当的柔韧性值得赞赏，但“卷而怀之”并不等于“邦无道”时唯一可行的途径。<span class="lyseealso"><span>【参】</span><span>《晋书·王戎传》载，竹林七贤之末的王戎<span class="lyq">以晋室方乱，慕蘧伯玉之为人，与时舒卷，无蹇谔之节。自经典选，未尝进寒素、退虚名，但与时浮沉，户调门选而已。</span>晋武帝司马炎曾为他开脱：<span class="lyq">“戎之为行，岂怀私苟得，正当不欲为异耳！”</span>他位至三公，却委事下属，欢娱逐乐，并无蘧伯玉汲汲于仁的精神，也落得个<span class="lyq">苟媚取容</span>的评价。（蹇（<span class="lypinyin">jiǎn</span>）<a href="#e4">谔</a>：忠直敢言的样子。蹇：通“謇”，本义为口吃，引申为仗义执言，正直。经：管理。典选：选才为官，王戎时任吏部尚书。寒素：指门第低微的贤才。户调门选：指依照家世地位录用。）</span></span></p></li>
 </ul></div>
 </div>
 <a id="15.8"></a><div class="lyblob">
@@ -5465,7 +5465,7 @@ img.characterimg {
 <a id="16.9"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#16.9">16.9</a></div>
 <div class="lybloboriginaltext"><p>孔子曰：“生而知之者，上也；学而知之者，次也；困而学之，又其次也；困而不学，民斯为下矣。”</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><a id="kun4"></a><span class="lyterm">困</span>：艰难，窘迫，引申为滞碍，有所不通。<span class="lyseealso"><span>【参】</span><span><a href="#6.21" class="lyref">6.21</a> <a href="#17.3" class="lyref">17.3</a> 。《韩诗外传》第1卷第18章：<span class="lyq">孔子曰：“君子有三忧。弗知，可无忧与？知而不学，可无忧与？学而不行，可无忧与？”</span>南宋王应麟的《困学纪闻》书名即取本章之意：<span class="lyq">困而学之，<a href="#shu4a">庶</a>自别于下民。开卷有得，述为《纪闻》。</span></span></span></p></li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><a id="kun4"></a><span class="lyterm">困</span>：艰难，窘迫，引申为滞碍，有所不通。<span class="lyseealso"><span>【参】</span><span><a href="#6.21" class="lyref">6.21</a> <a href="#17.3" class="lyref">17.3</a> 。《韩诗外传》第1卷第18章：<span class="lyq">孔子曰：“君子有三忧。弗知，可无忧与？知而不学，可无忧与？学而不行，可无忧与？”</span>南宋王应麟的考证名著《困学纪闻》，书名即取本章之意：<span class="lyq">困而学之，<a href="#shu4a">庶</a>自别于下民。开卷有得，述为《纪闻》。</span></span></span></p></li></ul></div>
 </div>
 <a id="16.10"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#16.10">16.10</a></div>
@@ -5487,7 +5487,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#16.12">16.12</a></div>
 <div class="lybloboriginaltext"><p><a href="#qijinggong">齐景公</a>有马千驷，死之日，民无德而称焉；<a href="#boyishuqi">伯夷</a>、<a href="#boyishuqi">叔齐</a>饿于首阳之下，民到于今称之。其斯之谓与？</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">有马千<a href="#si4">驷</a></span>是齐景公奢侈游逸生活的一个侧影。<span class="lyterm">马</span>指私养玩赏用的良种马，而非军马或与民同乐者，在现代就相当于花公款炫富。<span class="lyseealso"><span>【参】</span><span>《史记·孔子世家》：<span class="lyq">〔景公〕他日又复问政于孔子，孔子曰：“政在节财。”</span>（节财：指削减公费开支。）</span></span></p></li>
+<li><p><span class="lyterm">有马千<a href="#si4">驷</a></span>是齐景公奢侈游逸生活的一个侧影。<span class="lyterm">马</span>指私养玩赏用的良种马，而非军马或与民同乐者，在现代就相当于花公款摆阔。<span class="lyseealso"><span>【参】</span><span>《史记·孔子世家》：<span class="lyq">〔景公〕他日又复问政于孔子，孔子曰：“政在节财。”</span>（节财：指削减公费开支。）</span></span></p></li>
 <li><p><span class="lyterm">其斯之谓与？</span>：指的应该就是这个吧？本章疑有缺漏，所指无法确考。有认为 <a href="#12.10" class="lyref">12.10</a>  引用的<span class="lyq">诚不以富，亦只以异</span>应该移到本句之前。<span class="lyseealso"><span>【参】</span><span><a href="#15.25" class="lyref">15.25</a> </span></span></p></li>
 </ul></div>
 </div>
@@ -5500,7 +5500,7 @@ img.characterimg {
 </div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">异<a href="#wen2c">闻</a></span>：指（从孔子那里学到的）与众不同的知识，私房货。</p></li>
-<li><p><a id="wuyiyan"></a><span class="lyterm">无以言</span>：指无法在正式场合对答如仪。<span class="lyseealso"><span>【参】</span><span>《汉书·艺文志》：<span class="lyq">古者诸侯卿大夫交接邻国，以<a href="#weiyandayi">微言</a>相感，当揖让之时，必称《诗》以<a href="#yu4c">谕</a>其志，盖以别贤不肖而观盛衰焉。故孔子曰“不学《诗》，无以言”也。</span>后来古典小说、评书演义中“有诗为证”的惯例，可能也是受此影响。思考：西方社交讲究的 <a href="https://en.wikipedia.org/wiki/Small_talk" class="lyurl" target="_blank">small talk</a> 与此处的“微言”有何异同？</span></span></p></li>
+<li><p><a id="wuyiyan"></a><span class="lyterm">无以言</span>：指无法在正式场合对答如仪。<span class="lyseealso"><span>【参】</span><span>《汉书·艺文志》：<span class="lyq">古者诸侯卿大夫交接邻国，以<a href="#weiyandayi">微言</a>相感，当揖让之时，必称《诗》以<a href="#yu4c">谕</a>其志，盖以别贤不肖而观盛衰焉。故孔子曰“不学《诗》，无以言”也。</span>后来古典小说、评书演义中“有诗为证”的惯例，可能也是受此影响。思考：西方社交讲究的 <a href="https://en.wikipedia.org/wiki/Small_talk" class="lyurl" target="_blank">small talk</a> 与本章的“微言”有何异同？</span></span></p></li>
 <li>
 <p><span class="lyterm">远其子</span>：指不对自己的儿子有所偏私。<span class="lyseealso"><span>【参】</span><span><a href="#7.24" class="lyref">7.24</a> 。黄式三《论语后案》：<span class="lyq">后儒舍经文正训而求圣人不传之秘，正与子禽同意。</span></span></span></p>
 <p>后来“庭训”就指得自父亲的教导，又泛指家教。<span class="lyexample"><span>【例】</span><span>《旧唐书·刘赞传》载，唐德宗时期的宣州刺史刘赞<span class="lyq">不知书，但以强猛立威，官吏畏之。……<a href="#dizi">子弟</a>皆亏庭训，虽童年稚齿，便能侮<a href="#yi4g">易</a>骄人，人士鄙之。</span></span></span></p>
@@ -5589,9 +5589,9 @@ img.characterimg {
 </div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li>
-<p><span class="lyterm">畔</span>：通“叛”，造反，叛乱。<span class="lyterm">公山弗扰</span>：又名公山不狃（<span class="lypinyin">niǔ</span>），字子泄，<a href="#jishi">季氏</a>家臣，时任<a href="#feiyi">费邑</a>宰。他召孔子之事未见于现存史料。《左传》定公五年、八年载，他<span class="lyq">不得志于季氏</span>，转而依附<a href="#yanghuo">阳货</a>。本章的背景尚无定论，一说就是定公八年（前502年）的阳货之叛，尽管缺乏公山弗扰实际参与的记录：直书<span class="lyterm">以费畔</span>是后世编者揭示其异心，而孔子当时并不清楚他的真面目，希望在费邑有所作为。</p>
-<p><a id="duosandu"></a>公山弗扰有史可查的“以费畔”发生在前498年（《左传·定公十二年》）。当时孔子已被<a href="#dinggong">鲁定公</a>任命为<a href="#sikou">司寇</a>，主持<span class="lykeyword">堕三都</span>工程，要将<a href="#sanhuan">三桓</a>封邑的城墙超出规格的部分拆除，削其兵备，以防据守作乱，也遏制日益强大的家臣势力。叔孙氏的<a href="#shusunwushu">郈邑</a>，2年前刚平息过家臣叛乱，率先配合整顿完毕。轮到费邑时，公山弗扰与叔孙氏庶子叔孙辄率领武装强烈抵抗，一度反攻入鲁国国都，结果被孔子指挥鲁军击败，他们逃往齐国，费邑总算也改建达标了。最后是<a id="chengyi"></a><a href="#mengshi">孟氏</a>的成邑（在今山东省泰安市宁阳县），可邑宰<a href="#gonglianchufu">公敛处父</a>也是个狠角色，他说成邑乃孟氏之保障，让宗主<a href="#mengyizi">孟懿子</a>假装不知，置之不理。年底定公亲自带兵讨伐成邑，也未能攻克，使公室蒙羞，堕三都就此失败。<a href="#qirenkuinvyue">不久</a>，孔子离别了鲁国，开始在各国间<a href="#jikangzi">漂泊</a>。</p>
-<p>公山弗扰和叔孙辄后来又去了吴国。前487年（《左传·哀公八年》），吴王夫差要为<a href="#zhuguo">邾国</a>出头，讨伐鲁国。叔孙辄表示赞成，受到公山弗扰指责：<span class="lyq">君子<a href="#wei2c">违</a>，不适仇国，……人之行也，不以所恶废乡。今子以小恶而欲覆宗国，不亦难乎？</span>公山弗扰自己劝阻吴王不成，进军时就带队走险道，使鲁国来得及戒备，不失故土之情，这也是他与阳货的区别吧。</p>
+<p><span class="lyterm">畔</span>：通“叛”，造反，叛乱。<span class="lyterm">公山弗扰</span>：又名公山不狃（<span class="lypinyin">niǔ</span>），字子泄，<a href="#jishi">季氏</a>家臣，时任<a href="#feiyi">费邑</a>宰。他召孔子之事未见于现存史料。《左传》定公五年、八年载，他<span class="lyq">不得志于季氏</span>，转而依附<a href="#yanghuo">阳货</a>。本章的背景尚无定论，一说就是定公八年（前502年）的阳货之叛，尽管缺乏公山弗扰参与的实证：直书<span class="lyterm">以费畔</span>是后世编者揭示其异心，而孔子当时并不清楚他的真面目，希望在费邑有所作为。</p>
+<p><a id="duosandu"></a>有史可查的“公山弗扰以费畔”发生在前498年（《左传·定公十二年》）。当时孔子已被<a href="#dinggong">鲁定公</a>任命为<a href="#sikou">司寇</a>，主持<span class="lykeyword">堕三都</span>工程，要将<a href="#sanhuan">三桓</a>封邑的城墙超出规格的部分拆除，削减兵备，以防据守作乱，并遏制日益强大的家臣势力。叔孙氏的<a href="#shusunwushu">郈邑</a>，2年前刚平息过家臣叛乱，率先配合整顿完毕。轮到费邑时，公山弗扰与叔孙氏庶子叔孙辄率领武装强烈抵抗，一度反攻入鲁国国都，被孔子指挥鲁军击败，逃往齐国，费邑总算也改建达标了。最后是<a id="chengyi"></a><a href="#mengshi">孟氏</a>的成邑（在今山东省泰安市宁阳县），可邑宰<a href="#gonglianchufu">公敛处父</a>是个狠角色，他说成邑乃孟氏之保障，让宗主<a href="#mengyizi">孟懿子</a>假装不知，置之不理。年底定公亲自带兵讨伐成邑，也未能攻克，使公室蒙羞，堕三都就此失败。<a href="#qirenkuinvyue">不久</a>，孔子离别了鲁国，开始在各国间<a href="#jikangzi">漂泊</a>。</p>
+<p>后来，公山弗扰和叔孙辄又到吴国安身。前487年（《左传·哀公八年》），吴王夫差要为<a href="#zhuguo">邾国</a>出头，起兵讨鲁。叔孙辄表示赞成，受到公山弗扰指责：<span class="lyq">君子<a href="#wei2c">违</a>，不适仇国，……人之行也，不以所恶废乡。今子以小恶而欲覆宗国，不亦难乎？</span>公山弗扰劝阻吴王不成，进军时就带队走险道，使鲁国来得及防备。不失故土之情，这也是他和阳货的区别吧。</p>
 </li>
 <li><p><span class="lyterm"><a href="#mo4">末</a>之也已</span>：（假如）没有什么地方去也就罢了。<span class="lyterm">之</span>：动词，去，往。</p></li>
 <li><p><span class="lyterm">公山氏之之</span>：去公山氏那里。第一个<span class="lyterm">之</span>是助词，用于“<a href="#ozhiv">O之V</a>”的倒装结构，第二个<span class="lyterm">之</span>是动词，去，往。</p></li>
@@ -5728,10 +5728,10 @@ img.characterimg {
 <li><p><span class="lyterm">疾</span>：缺点，毛病。<span class="lyexample"><span>【例】</span><span>《孟子·梁惠王下》：<span class="lyq">寡人有疾，寡人好色。</span></span></span><span class="lyseealso"><span>【参】</span><span><a href="#17.8" class="lyref">17.8</a> </span></span></p></li>
 <li><p><a id="si4b"></a><span class="lyterm">肆</span>：放纵，指自由随意，不拘小节。相对地，<span class="lyterm">荡</span>则是过于出格，<a href="#19.11">逾大闲</a>。</p></li>
 <li><p><a id="jin1b"></a><span class="lyterm"><a href="#jin1">矜</a></span>：骄傲自负，自高自大。<span class="lyseealso"><span>【参】</span><span>《三国志·蜀书·刘璋传》裴松之注引习凿齿语：<span class="lyq">昔<a href="#qihuangong">齐桓</a>一矜其功而叛者九国，曹操暂自骄伐而天下三分，皆勤于数十年之内而弃之于俯仰之顷，岂不惜乎！是以君子劳谦日昃，<a href="#lvyixiaren">虑以下人</a>，功高而居之以让，势尊而守之以卑。</span>（昃（<span class="lypinyin">zè</span>）：太阳西斜。日昃：出自《周易·离》，这里指工作勤久。）</span></span></p></li>
-<li><p><a id="lian2"></a><span class="lyterm">廉</span>：品行正直而有失宽容，相当于严于律己也严于律人。其本义为堂屋的地面与墙面并成的直二面角（而非墙角旮旯），所以有方正之意，又因为相夹则狭，所以还有狭窄之意，《说文解字》就直接解释为仄（狭窄）。常用的清正不贪，是它的后起偏义。这里的解释略与各家不同，他们未能指明狭窄，似乎偏离了“疾”。<span class="lyexample"><span>【例】</span><span>《庄子·徐无鬼》评价<a href="#guanzhong">鲍叔牙</a>：<span class="lyq">为人洁廉，善士也；其于<a href="#1.8">不己若者</a>不<a href="#bi3">比</a>之，又一闻人之过，终身不忘。</span>《史记·屈原贾生列传》评价屈原：<span class="lyq">其志洁，故其称物芳；其行廉，故死而不容。</span>《史记·郦生陆贾列传》评价平原君朱建：<span class="lyq">刻廉刚直，……行不<a href="#gouhe">苟合</a>，义不取容。</span>（刻：严苛。<a id="qurong"></a>取容：讨好别人以求安身。）</span></span><span class="lyseealso"><span>【参】</span><span>《韩诗外传》第1卷第25章说，<span class="lyq">仁道有四，磏为下</span>（磏（<span class="lypinyin">lián</span>）：赤色有棱角的石头，这里通“廉”），并举<a href="#boyishuqi">伯夷</a>、<a href="#boyishuqi">叔齐</a>、<a href="#yuansi">原思</a>等人为例：<span class="lyq">廉洁直方，<a href="#ji2">疾</a>乱不治，恶邪不<a href="#kuang1">匡</a>，虽居乡里，若坐涂炭，命入朝廷，如赴汤火，非其民不使，非其食弗尝，疾乱世而轻死，弗顾兄弟，……是磏仁者也。……山锐则不高，水径则不深，仁磏则其德不厚。</span>（如赴汤火：形容在所不惜。<a href="#jing4">径</a>：指窄小。）1998年香港电影《野兽刑警》中有句善恶分明的独白，可以作为“廉”的注脚：<span class="lyq">这个世界在黑白之间，有一个地方叫灰色的地带。有人灰色的地带好大一片，有人小点，而我黑白之间，只有一条线。</span></span></span></p></li>
+<li><p><a id="lian2"></a><span class="lyterm">廉</span>：品行正直而有失宽容，相当于严于律己也严于律人。其本义为堂屋的地面与墙面并成的直二面角（而非墙角旮旯），所以有方正之意，又因为相夹则狭，所以还有狭窄之意，《说文解字》就直接解释为仄（狭窄）。常用的清正不贪，是它的后起偏义。这里的解释略与各家不同，他们未能指明狭窄，似乎偏离了“疾”。<span class="lyexample"><span>【例】</span><span>《庄子·徐无鬼》评价<a href="#guanzhong">鲍叔牙</a>：<span class="lyq">为人洁廉，善士也；其于<a href="#1.8">不己若者</a>不<a href="#bi3">比</a>之，又一闻人之过，终身不忘。</span>《史记·屈原贾生列传》评价屈原：<span class="lyq">其志洁，故其称物芳；其行廉，故死而不容。</span>《史记·郦生陆贾列传》评价平原君朱建：<span class="lyq">刻廉刚直，……行不<a href="#gouhe">苟合</a>，义不取容。</span>（刻：严苛。<a id="qurong"></a>取容：讨好别人以求安身。）</span></span><span class="lyseealso"><span>【参】</span><span>《韩诗外传》第1卷第25章说，<span class="lyq">仁道有四，磏为下</span>（磏（<span class="lypinyin">lián</span>）：赤色有棱角的石头，这里通“廉”），并举<a href="#boyishuqi">伯夷</a>、<a href="#boyishuqi">叔齐</a>、<a href="#yuansi">原思</a>等人为例：<span class="lyq">廉洁直方，<a href="#ji2">疾</a>乱不治，恶邪不<a href="#kuang1">匡</a>，虽居乡里，若坐涂炭，命入朝廷，如赴汤火，非其民不使，非其食弗尝，疾乱世而轻死，弗顾兄弟，……是磏仁者也。……山锐则不高，水径则不深，仁磏则其德不厚。</span>（如赴汤火：形容在所不惜。<a href="#jing4">径</a>：指窄小。）1998年香港电影《野兽刑警》中有句善恶分明的独白，可以作为“廉”的注脚：<span class="lyq">这个世界在黑白之间，有一个地方叫灰色的地带。有人灰色的地带好大一片，有人小点；而我黑白之间，只有一条线。</span></span></span></p></li>
 <li><p><span class="lyterm"><a href="#fen4a">忿</a>戾</span>（<span class="lypinyin">lì</span>）：蛮横易怒。<a id="li4a"></a><span class="lyterm">戾</span>：乖张，暴虐。</p></li>
 </ul>
-<p><span class="lyseealso"><span>【参】</span><span>古今对比以讽时弊的例子有很多，如唐代皮日休的名作《鹿门隐书》：<span class="lyq">古之官人也，以天下为己<a href="#lei3a">累</a>，故已忧之。今之官人也，以已为天下累，故人忧之。……古之隐也，志在其中。今之隐也，爵在其中。……古之杀人也怒，今之杀人也笑。古之用贤也为国，今之用贤也为家。……古之置吏也，将以逐盗。今之置吏也，将以为盗。</span></span></span></p>
+<p><span class="lyseealso"><span>【参】</span><span>古今对比以讽时弊的例子有很多，如唐代皮日休的名作《鹿门隐书》：<span class="lyq">古之官人也，以天下为己<a href="#lei3a">累</a>，故己忧之。今之官人也，以己为天下累，故人忧之。……古之隐也，志在其中。今之隐也，爵在其中。……古之杀人也怒，今之杀人也笑。古之用贤也为国，今之用贤也为家。……古之置吏也，将以逐盗。今之置吏也，将以为盗。</span></span></span></p>
 </div>
 </div>
 <a id="17.17"></a><div class="lyblob">
@@ -5747,7 +5747,7 @@ img.characterimg {
 <li><p><span class="lyterm">紫之夺朱</span>。<span class="lyterm">朱</span>：大红色，属于正色。<span class="lyterm">紫</span>：红与蓝的混合色，属于杂色。<span class="lyterm">夺</span>：压倒，胜过。这是指紫色逐渐代替红色成为当时官服的标准色，类似后来的“紫袍金带”，孔子不喜欢这种变化。</p></li>
 <li><p><span class="lyterm">覆</span>：本义为翻倒，引申为使灭亡，倾覆。</p></li>
 </ul>
-<p><span class="lyseealso"><span>【参】</span><span><a href="#13.3" class="lyref">13.3</a> 。《孟子·尽心下》引<span class="lyq">孔子曰：“恶似而非者：恶莠，恐其乱苗也；恶<a href="#ning4">佞</a>，恐其乱<a href="#yi4">义</a>也；恶利口，恐其乱<a href="#xin4">信</a>也；恶郑声，恐其乱乐也；恶紫，恐其乱朱也；恶<a href="#xiangyuan">乡原</a>，恐其乱<a href="#de2">德</a>也。”</span>（莠（<span class="lypinyin">yǒu</span>）：狗尾草，常见于田间，看上去像谷子。）</span></span></p>
+<p><span class="lyseealso"><span>【参】</span><span><a href="#13.3" class="lyref">13.3</a> 。《孟子·尽心下》引<span class="lyq">孔子曰：“恶似而非者：恶莠，恐其乱苗也；恶<a href="#ning4">佞</a>，恐其乱<a href="#yi4">义</a>也；恶利口，恐其乱<a href="#xin4">信</a>也；恶郑声，恐其乱乐也；恶紫，恐其乱朱也；恶<a href="#xiangyuan">乡原</a>，恐其乱<a href="#de2">德</a>也。”</span>（莠（<span class="lypinyin">yǒu</span>）：狗尾草，常见于田间，形似谷子。）</span></span></p>
 </div>
 </div>
 <a id="17.19"></a><div class="lyblob">
@@ -5763,9 +5763,9 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#17.20">17.20</a></div>
 <div class="lybloboriginaltext"><p>孺悲欲见孔子，孔子辞以疾。将命者出户，取瑟而歌，使之闻之。</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">孺悲</span>：鲁国人。《礼记·杂记下》载，<a href="#aigong">鲁哀公</a>曾派他向孔子学习士丧礼，该礼因而得以流传，但和这次的“欲见”不是一回事。</p></li>
+<li><p><span class="lyterm">孺悲</span>：鲁国人。《礼记·杂记下》载，<a href="#aigong">鲁哀公</a>曾派他向孔子学习士丧礼，该礼得以流传，但和这次的“欲见”不是一回事。</p></li>
 <li><p><span class="lyterm"><a href="#jiangming">将命</a>者</span>：指替孔子向孺悲传话的人。</p></li>
-<li><p><span class="lyterm">使之闻之</span>：让他听见（从而知道自己并未生病）。第一个<span class="lyterm">之</span>理解成孺悲或将命者（再转告孺悲）皆通。孔子这次为什么不愿见孺悲，已经不得而知。《孟子·告子下》，<span class="lyq">孟子曰：“教亦多术矣。予不屑之教诲也者，是亦教诲之而已矣。”</span>或许略通其意。</p></li>
+<li><p><span class="lyterm">使之闻之</span>：让他听见（从而知道自己并未生病）。第一个<span class="lyterm">之</span>理解成孺悲或将命者（再转告孺悲）皆通。孔子这次为什么不愿见孺悲，已经不得而知。《孟子·告子下》载，<span class="lyq">孟子曰：“教亦多术矣。予不屑之教诲也者，是亦教诲之而已矣。”</span>或许略通其意。</p></li>
 </ul></div>
 </div>
 <a id="17.21"></a><div class="lyblob">
