--- a/aboly.html
+++ b/aboly.html
@@ -812,7 +812,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><a id="yi4"></a><span class="lyterm">义</span>：宜，适当，又引申为正义，符合道德规范。<span class="lyexample"><span>【例】</span><span><a href="#7.16" class="lyref">7.16</a> <span class="lyq">不义而富且贵，于我如浮云。</span></span></span><span class="lyseealso"><span>【参】</span><span>《韩非子·解老》：<span class="lyq">义者，君臣上下之事，父子贵贱之差也，知交朋友之接也，亲疏内外之分也。……义者，谓其宜也，宜而为之。</span>《孟子·告子上》：<span class="lyq">仁，人心也；义，人路也。</span>可以说，仁是“真正的人”的精神，义是“真正的人”的表现，也就是 <a href="#16.11" class="lyref">16.11</a> <span class="lyq">行义以达其道。</span></span></span></p></li>
 <li><p><span class="lyterm">言可复也</span>：说过的话能够兑现。<span class="lyterm">复</span>：抵偿，偿还，引申为履行，实践。</p></li>
-<li><p><span class="lyterm">因不失其亲，<a href="#yi4d">亦</a>可宗也</span>：较难确解。唐代张说《府君墓志》等古文中，把上半句引作<span class="lyq">姻不失亲</span>；南朝梁皇侃《论语义疏》里，下半句为<span class="lyq">亦可宗敬也</span>。据此理解，<span class="lyterm">因</span>通“姻”，如因缘亦通姻缘；<span class="lyterm">宗</span>为动词，尊崇，效法。这句话的意思就是，结婚成家以后，如果不疏远了本家亲戚，也是值得尊敬的榜样。如果把“亲”单纯地理解为<a href="#qinqin">父母</a>，就类似于现代说的不能“娶了媳妇忘了娘”。这后一个解释与各家不同。<span class="lyseealso"><span>【参】</span><span><a href="#18.10" class="lyref">18.10</a> </span></span></p></li>
+<li><p><span class="lyterm">因不失其亲，<a href="#yi4d">亦</a>可宗也</span>：较难确解。唐代张说《府君墓志》等古文中，把上半句引作<span class="lyq">姻不失亲</span>；南朝梁皇侃《论语义疏》里，下半句为<span class="lyq">亦可宗敬也</span>。据此理解，<span class="lyterm">因</span>通“姻”，如因缘亦通姻缘；<span class="lyterm">宗</span>为动词，尊崇，效法。这句话的意思就是，结婚成家以后，如果不疏远了本家亲戚，也是值得尊敬的榜样。如果把“亲”单纯地理解为<a href="#qinqin">父母</a>，就类似于现代说的不能“娶了媳妇忘了娘”。<span class="lyseealso"><span>【参】</span><span><a href="#18.10" class="lyref">18.10</a> </span></span></p></li>
 </ul></div>
 </div>
 <a id="1.14"></a><div class="lyblob">
@@ -1673,8 +1673,12 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#4.13">4.13</a></div>
 <div class="lybloboriginaltext"><p>子曰：“能以礼让为国乎，何有？不能以礼让为国，如礼何？”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
+<li>
+<p><span class="lyterm"><a href="#li3">礼</a>让</span>：并列结构的名词，守礼和谦让。<span class="lyexample"><span>【例】</span><span>《尚书·虞夏书·尧典》：<span class="lyq">〔帝<a href="#yao">尧</a>〕允恭克让。</span>（允：诚，确实。<a id="ke4a"></a>克：能。）孔颖达疏引郑玄注：<span class="lyq">推贤尚善曰让。</span></span></span></p>
+<p>现代汉语中，“礼让”已基本转为偏正结构，多用作动词，有礼貌地谦让。</p>
+</li>
 <li><p><a id="wei2b"></a><span class="lyterm">为</span>（<span class="lypinyin">wéi</span>）：动词，等于一般性的做，do，可以搭配的对象很宽泛，要根据上下文具体理解。<span class="lyterm">为国</span>：指治国理政。<span class="lyseealso"><span>【参】</span><span>《韩诗外传》第1卷第5章：<span class="lyq">人之命在天，国之命在礼。君人者，降礼尊贤而<a href="#wangdao">王</a>，重法爱民而霸，好利多诈而危，权谋倾覆而亡。</span>《左传·襄公十三年》：<span class="lyq">让，礼之主也。<a href="#fanxuanzi">范宣子</a>让，其下皆让。……世之治也，君子尚能而让其下，小人农力以事其上，是以上下有礼，而谗<a href="#te2">慝</a><a href="#chu4">黜</a>远，由不争也，谓之懿德。及其乱也，君子称其功以<a href="#jia1a">加</a>小人，小人<a href="#fa2">伐</a>其技以<a href="#ping2">冯</a>君子，是以上下无礼，乱虐并生，由争善也，谓之昏德。国家之敝，恒必由之。</span>（农力：努力。）《战国策》刘向书录：<span class="lyq">五<a href="#zhuhou">伯</a>之起，尊事周室。五伯之后，……犹以义相支持，歌说以相感，聘觐以相交，期会以相一，盟誓以相救。天子之命，犹有所行；会享之国，犹有所耻；小国得有所依，百姓得有所息。故孔子曰：“能以礼让为国乎，何有？”周之流化，岂不大哉！</span></span></span></p></li>
-<li><p><a id="heyou"></a><span class="lyterm">何有</span>：字面上是说有什么呢，多用于反问，可表达的意思包括：有什么难的呢，有什么关系呢，有什么值得看重的呢，有什么好在乎的呢。这里是第一个意思。<span class="lyexample"><span>【例】</span><span><a href="#6.8" class="lyref">6.8</a> <span class="lyq">于从政乎何有？</span>《史记·齐太公世家》唐代颜师古注：<span class="lyq">人之情非不爱其身也，其身之忍，又将何有于君？</span>《左传·僖公二十四年》：<span class="lyq">除君之恶，唯力是视，蒲人狄人，余何有焉？</span>李贽《与周友山》：<span class="lyq">士为知己者死，死且甘焉，又何有于废弃<a href="#yu2">欤</a>？</span></span></span></p></li>
+<li><p><a id="heyou"></a><span class="lyterm">何有</span>：字面上是说有什么呢，多用于反问，可表达的意思包括：有什么难的呢，有什么关系呢，有什么值得看重的呢，有什么好在乎的呢。这里是第一个意思，相当于 <a href="#6.8" class="lyref">6.8</a> <span class="lyq">于从政乎何有？</span>《后汉书·班昭传》即引作：<span class="lyq">论语曰：“能以礼让为国，于从政乎何有？”</span><span class="lyexample"><span>【例】</span><span>《宋史·程琳传》：<span class="lyq">臣为陛下惜，于臣何有？</span>《左传·僖公二十四年》：<span class="lyq">除君之恶，唯力是视，蒲人狄人，余何有焉？</span>李贽《与周友山》：<span class="lyq">士为知己者死，死且甘焉，又何有于废弃<a href="#yu2">欤</a>？</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="4.14"></a><div class="lyblob">
@@ -2419,7 +2423,10 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#7.1">7.1</a></div>
 <div class="lybloboriginaltext"><p>子曰：“述而不作，信而好古，窃比于我老彭。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">述而不作</span>：阐述传播（古代文化）但不创作发明（新观点新思想）。</p></li>
+<li>
+<p><span class="lyterm">述而不作</span>：阐述传播（古代文化），而不创造发明（新的礼法制度）。孔子删定<a href="#liujing">六经</a>，可谓“述”之大成，“不作”则是他的谦词。</p>
+<p>或者可以理解为，前有<a href="#zhougong">周公</a>制礼作乐，已经 <a href="#3.14" class="lyref">3.14</a> <span class="lyq">郁郁乎文哉</span>了，关键在于有意愿、有条件去实行，无论古今皆是如此。所以他会不辞劳苦地奔波，又会慨叹：<a href="#17.5" class="lyref">17.5</a> <span class="lyq">如有用我者，吾其为东周乎！</span>这个解释似与各家不同。</p>
+</li>
 <li><p><span class="lyterm">信而<a href="#hao4">好</a>古</span>：信奉并喜爱古代文化。</p></li>
 <li><p><a id="qie4a"></a><span class="lyterm">窃</span>：私下，私自，用于谦逊地表达自己的观点或行为。这是从“偷盗”的本义引申而来，偷偷地，暗自地，stealthy。<span class="lyexample"><span>【例】</span><span>《史记·李斯列传》：<span class="lyq">臣闻吏议逐客，窃以为过矣。</span>《史记· 司马相如列传》：<span class="lyq">臣窃观之，齐殆不如。</span>（<a id="dai4a"></a>殆：大概。）</span></span></p></li>
 <li><p><span class="lyterm">比于我老彭</span>：这是孔子把自己和古代贤人老彭相比。<a id="wolaopeng"></a>加<span class="lyterm">我</span>是亲切的口吻，类似于现代口语“咱家的”。<span class="lyterm">老彭</span>：说法不一，有说就是《大戴礼记·虞戴德》篇末提到的商朝贤大夫，但都难以直接对应到孔子的前两句评价。</p></li>
@@ -2665,13 +2672,13 @@ img.characterimg {
 <a id="7.28"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#7.28">7.28</a></div>
 <div class="lybloboriginaltext"><p>子曰：“盖有不知而作之者，我无是也。多闻，择其善者而从之，多见而识之，知之次也。”</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">知（<span class="lypinyin">zhì</span>）之次</span>：差不多算是智了。<span class="lyterm">次</span>：差一等，有几乎可以相比、同列的意味。<span class="lyexample"><span>【例】</span><span>北宋陶谷《清异录·药》：<span class="lyq">医之于人，功次天地。</span>传统评书里常有“胜似下山猛虎，亚赛出海蛟龙”之类的说法，“亚赛”就和“次”的含义相近。</span></span></p></li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">知（<span class="lypinyin">zhì</span>）之次</span>：差不多算是智了。<span class="lyterm">次</span>：差一等，也有几乎可以相比、同列的意味。<span class="lyexample"><span>【例】</span><span>北宋陶谷《清异录·药》：<span class="lyq">医之于人，功次天地。</span>传统评书里常有“胜似下山猛虎，亚赛出海蛟龙”之类的说法，“亚赛”就和“次”相近。</span></span><span class="lyseealso"><span>【参】</span><span><a href="#2.17" class="lyref">2.17</a> <span class="lyq">知之为知之，不知为不知，是知也。</span></span></span></p></li></ul></div>
 </div>
 <a id="7.29"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#7.29">7.29</a></div>
 <div class="lybloboriginaltext"><p>互乡难与言。童子见，门人惑。子曰：“与其进也，不与其退也，唯何甚？人洁己以进，与其洁也，不保其往也。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><a id="huxiang"></a><span class="lyterm">互乡难与言</span>：互乡这个地方的人很难沟通交流，也就是不容易好好说话。<span class="lyterm">互乡</span>在哪里已难以确考。</p></li>
+<li><p><a id="huxiang"></a><span class="lyterm">互乡难与言</span>：互乡这个地方的人很难沟通交流，也就是不容易好好说话。<span class="lyterm">互乡</span>在哪里难以确考。</p></li>
 <li><p><span class="lyterm"><a href="#tongzi">童子</a>见</span>：指孔子接见了互乡的一个孩子。</p></li>
 <li><p><span class="lyterm"><a href="#yu3a">与</a>其进</span>：意思是，赞赏他追求进步。</p></li>
 <li><p><span class="lyterm">唯何甚？</span>：有什么过分的呢？<span class="lyterm">唯</span>：无意义的句首助词，也写作惟、维。<span class="lyexample"><span>【例】</span><span><a href="#11.26" class="lyref">11.26</a> <span class="lyq">唯求则非邦也与？</span>《诗经·召南·鹊巢》：<span class="lyq">维鹊有巢，维鸠居之。</span></span></span></p></li>
@@ -3896,7 +3903,7 @@ img.characterimg {
 <li><p><a id="jiziran"></a><span class="lyterm">季子然</span>：<a href="#jishi">季氏</a>的族人。当时子路和冉求都是季氏家臣，所以他会这么问。</p></li>
 <li><p><span class="lyterm">异之问</span>：“<a href="#ozhiv">O之V</a>”的倒装结构，问的是别人。</p></li>
 <li><p><a id="juchen"></a><span class="lyterm">具臣</span>：充任其职而碌碌无为之臣。<span class="lyterm">具</span>：出现在那里而已、徒具形式的意思。<a id="juwen"></a><span class="lyexample"><span>【例】</span><span>“具文”指空文，只有样子而不起实际作用的规章制度，现代汉语中也很常用。<a id="beiyuan"></a>“备员”与“具臣”的构词和含义都相近（员：官员，人员），又可指职位。如《史记·张丞相列传》说，汉武帝的几任丞相为官但求廉谨，<span class="lyq">备员而已，无所能发明功名有著于当世者。</span>（发明：建树，昭彰。）《后汉书·仲长统传》载，东汉建立后，光武帝愠于公室失权，强臣窃命，决然以尚书架空丞相，总揽朝政，<span class="lyq">自此以来，三公之职，备员而已</span>。</span></span><span class="lyseealso"><span>【参】</span><span><a href="#14.22" class="lyref">14.22</a> 。唐代赵蕤（<span class="lypinyin">ruí</span>）《长短经·臣行》描述的六正六邪之臣，也包括大臣和具臣：<span class="lyq">虚心尽意，日进善道，勉主以礼义，谕主以长策，将顺其美，匡救其恶，如此者，大臣也。……安官贪禄，不务公事，与世沉浮，左右观望，如此者，具臣也。</span>（将（<span class="lypinyin">jiāng</span>）：扶助。）</span></span></p></li>
-<li><p><span class="lyterm">从之者与？</span>：（领导）让他们干什么都照办吗？<span class="lyterm">从之者</span>：用作贬义，唯命是从者，走狗。而真正的大臣，应为国之<a href="#gugong">股肱</a>爪牙。孔子坚持大义，他的回答乍看似乎突兀，含有对季氏窃政的不满，可比较 <a href="#13.14" class="lyref">13.14</a> 。</p></li>
+<li><p><span class="lyterm">从之者与？</span>：（领导）让他们干什么都照办吗？<span class="lyterm">从之者</span>：用作贬义，唯命是从者，走狗，minion。而真正的大臣，应为国之<a href="#gugong">股肱</a>爪牙。孔子坚持大义，他的回答乍看似乎突兀，含有对季氏窃政的不满，可比较 <a href="#13.14" class="lyref">13.14</a> 。</p></li>
 </ul></div>
 </div>
 <a id="11.25"></a><div class="lyblob">
@@ -3977,7 +3984,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li>
 <p><span class="lyterm">克己复礼</span>：约束自我（即<a href="#xiushen">修身</a>），回归于礼（即依礼做事）。这和 <a href="#6.30" class="lyref">6.30</a> <span class="lyq">己欲立而立人，己欲达而达人</span>，都是仁的表现，<a href="#12.22" class="lyref">12.22</a> <span class="lyq">爱人</span>则更接近仁的内涵。</p>
-<p><a id="ke4"></a><span class="lyterm">克</span>：抑制，约束，其本义为战胜。<span class="lyterm">克己</span>在古注中有约束自我和克制私欲两种常见解释，我认为可以视为泛指和特指，没有必要截然分开。</p>
+<p><a id="ke4"></a><span class="lyterm">克</span>：抑制，约束，其本义为战胜。<span class="lyterm">克己</span>在古注中有约束自我和克制私欲两种常见解释，可以视作泛指和特指，没有必要截然分开。</p>
 <div class="lyseealso">
 <p><span>【参】</span><span><a href="#9.4" class="lyref">9.4</a> <span class="lyq">子绝四</span>，<a href="#9.11" class="lyref">9.11</a> <span class="lyq">约我以礼。</span>“克己复礼为仁”并非孔子首创。据《左传》昭公八年（前534年）至十三年（前529年），以狂妄奢靡著称的楚灵王连续灭掉<a href="#chenguo">陈国</a>、<a href="#zhutuo">蔡国</a>后，想一举慑服诸侯、取代周室，不料陈蔡遗臣说动他的三个弟弟，趁其出征在外起兵作乱，他两个儿子被杀，军队溃散，落得个自缢而亡的下场。《昭公十二年》末尾，孔子认为楚灵王如能克制其贪欲，也不会取辱败亡：<span class="lyq">古也有志：“克己复礼，仁也。”信善哉！</span>（志：记载。）</span></p>
 <p>1993年首届国际大专辩论会决赛上，复旦大学队把“恶”定义为<span class="lyq">本能和欲望的无节制扩张</span>，把“善”定义为对它们的理性节制。克己复礼的提法经过孔子倡扬，数千年来直指时弊。</p>
@@ -5928,7 +5935,7 @@ img.characterimg {
 <p><span class="lyterm">滔滔者天下皆是也，而谁以易之？</span>：天下到处都是一样（的礼崩乐坏），就像这流水无穷无尽势不可挡啊，却能和谁来改变它呢？</p>
 <p><a id="taotao"></a><span class="lyterm">滔滔</span>：大水奔流不息的样子。<span class="lyexample"><span>【例】</span><span>毛泽东《菩萨蛮·黄鹤楼》（1927年）：<span class="lyq">把酒酹滔滔，心潮逐浪高！</span>（酹（<span class="lypinyin">lèi</span>）：以酒浇地作为祭奠。）</span></span></p>
 <p><span class="lyterm">谁以</span>：“以谁”的倒装。<span class="lyterm">以</span>：一般认为通“与”，和，同，这跟末句“丘不与易也”对应。<span class="lyexample"><span>【例】</span><span>《诗经·召南·江有汜》：<span class="lyq">不我以，其后也悔。</span>（汜（<span class="lypinyin">sì</span>）：江河中分而复合的支流。）《仪礼·乡射礼》：<span class="lyq">主人以宾揖，先入。</span></span></span></p>
-<p>我觉得理解成用、凭借、依靠，较符合长沮、桀溺消极悲观的态度。孔子更愿意积极参与，所以后面他用“与”。这个解释与各家不同。<span class="lyexample"><span>【例】</span><span>“以”之后跟人的例子，如 <a href="#13.30" class="lyref">13.30</a> <span class="lyq">以不教民战</span>，《史记·留侯列传》：<span class="lyq">陛下起布衣，以此属取天下。</span>（此属：这些人。）</span></span></p>
+<p>如果理解成用、凭借、依靠，似乎较符合长沮、桀溺消极悲观的态度。孔子更愿意积极参与，所以后面他用“与”。这个解释与各家不同。<span class="lyexample"><span>【例】</span><span>“以”之后跟人的例子，如 <a href="#13.30" class="lyref">13.30</a> <span class="lyq">以不教民战</span>，《史记·留侯列传》：<span class="lyq">陛下起布衣，以此属取天下。</span>（此属：这些人。）</span></span></p>
 <p><a id="yi4e"></a><span class="lyterm">易</span>：改变，这里有拯救、挽回的意味。</p>
 </li>
 <li><p><span class="lyterm">且而</span>里的<span class="lyterm">而</span>，通“尔”，你。</p></li>
@@ -6117,7 +6124,7 @@ img.characterimg {
 <li><p><span class="lyterm">后倦</span>：指接受起来容易疲倦，才放在后面教。这句话的观点是，应该先传授简明易用的知识，之后再讲深邃繁难的道理。</p></li>
 <li><p><span class="lyterm">譬诸草木，区以别矣</span>：拿草木来打比方，也是要按类分区（种植）有所不同的。这是说学生的秉性不同，教育要因人而异，分清先后偏重。</p></li>
 <li><p><span class="lyterm">诬</span>：歪曲。<span class="lyexample"><span>【例】</span><span>魏源《默觚下·治篇五》：<span class="lyq">执古以<a href="#sheng2">绳</a>今，是为诬今；执今以律古，是为诬古。</span></span></span></p></li>
-<li><p><a id="zu2"></a><span class="lyterm">卒</span>：终，末尾，完成。<span class="lyseealso"><span>【参】</span><span>《诗经·小雅·荡》：<span class="lyq">靡不有初，<a href="#xian3">鲜</a>克有终。</span>（靡（<span class="lypinyin">mǐ</span>）：无。克：能。）</span></span></p></li>
+<li><p><a id="zu2"></a><span class="lyterm">卒</span>：终，末尾，完成。<span class="lyseealso"><span>【参】</span><span>《诗经·小雅·荡》：<span class="lyq">靡不有初，<a href="#xian3">鲜</a><a href="#ke4a">克</a>有终。</span>（靡（<span class="lypinyin">mǐ</span>）：无。）</span></span></p></li>
 </ul></div>
 </div>
 <a id="19.13"></a><div class="lyblob">
@@ -6533,7 +6540,7 @@ img.characterimg {
 <p>可是过犹不及，补充材料太多，会有明显的不平衡感，也影响对原文的专注。<strong>建议始终把理解原文放在首位</strong>，额外的内容不妨选读。尤其对那些概括总结性的话，更应该有鉴别地看待。</p>
 <p>注解中还包含一些语法方面的内容。中国古代强调熟读成诵、文义自达，不太重视形式化规则，汉语语法是清末开始受西方影响才逐渐建立的。语法很实用，但汉语（包括古汉语）自有其特点，比如往往一个字就是一个词，词性又灵活多变，名词、动词、形容词、副词等等左右逢源，不像英语那样有明确的对错之分。所以，既要善用语法的分析能力，也应该知道，目前的语法体系还未能完善地概括汉语的特征。</p>
 <p>本书采用了很多超链接，这是电子版的一大优势，可以更好地形成概念网络。比如，有时单解释一个词感觉不够到位，还会链接到它更基本的含义。要有效使用本书，先要熟悉跳来跳去的操作，在跳之前要留意当前位置，浏览器也应该有后退、前进的功能。使用的超链接主要有3种样式：圆角小框跳转到某章开头，例如 <a href="#1.1" class="lyref">1.1</a> ；<a href="#junzi">这样</a>的跳转到本书内的某个位置；<a href="http://www.abolybook.org/" class="lyurl" target="_blank">这样</a>的打开外部网址链接。</p>
-<p>自古以来，《论语》的注解可谓千锤百炼，但我有时仍对旧注无法满意，思来想去，还是按自己的理解写了出来，记为“与各家不同”。在这方面，我很不喜欢标新立异，只是觉得自己的想法确实好一些，恳请读者指正。当然，这些解释未必是我第一个想到的，只是没有精力穷举相关的材料。它们有的与旧注差别很大，有的只是细节不同，共计9处：<a href="#1.13" class="lyref">1.13</a> <a href="#3.4" class="lyref">3.4</a> <a href="#3.23" class="lyref">3.23</a> <a href="#8.3" class="lyref">8.3</a> <a href="#8.9" class="lyref">8.9</a> <a href="#12.1" class="lyref">12.1</a> <a href="#17.1" class="lyref">17.1</a> <a href="#17.16" class="lyref">17.16</a> <a href="#18.6" class="lyref">18.6</a> 。</p>
+<p>自古以来，《论语》的注解可谓千锤百炼，但我有时仍对旧注无法满意，思来想去，还是按自己的理解写了出来，记为“与各家不同”。在这方面，我很不喜欢标新立异，只是觉得自己的想法确实好一些，恳请读者指正。当然，这些解释未必是我第一个想到的，只是没有精力穷举相关的材料。它们有的与旧注差别很大，有的只是细节不同，共计9处：<a href="#3.4" class="lyref">3.4</a> <a href="#3.23" class="lyref">3.23</a> <a href="#7.1" class="lyref">7.1</a> <a href="#8.3" class="lyref">8.3</a> <a href="#8.9" class="lyref">8.9</a> <a href="#12.1" class="lyref">12.1</a> <a href="#17.1" class="lyref">17.1</a> <a href="#17.16" class="lyref">17.16</a> <a href="#18.6" class="lyref">18.6</a> 。</p>
 <p>译评之外的部分，还包括<a href="#characters">人物表</a>、<a href="#topics">主题索引</a>以及<a href="#references">参考材料</a>。人物表把《论语》中的孔子弟子与常见人物（包括各种称呼）集中起来撰写小传，辅以超链接，就很容易熟悉各人的面貌。主题索引是从基本概念的角度梳理的《论语》纲要。另外还打算添加一个导言，用另一种方式把离散的水滴串成有机的整体，这是后续的一个重点内容。</p>
 <p>本书不含脚注。脚注总让我把视线从正文移开，指望看到些好东西，往往却很失望，还得努力续上中断的思维。脚注只有恼人的数字，而超链接有文本作指示，是可以预期的。我的选择是，把通常作为脚注的话，写成<a href="#sourcecode">源代码</a>里的注释，用“NOTE”标出。它们是对正文的补充说明，但还不值得出现在书面上。如果对正文的说法有疑惑，可以先看看注释里有没有解释。用“TODO”标出的，是我随时记下的想法，表示后续撰写的方向。</p>
 <a id="usage-format"></a><h2>电子版</h2>
